second task started

--- a/2 task/index.html
+++ b/2 task/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2 task</title>
-    <link rel="stylesheet" href="./index.css" />
+    <title>Welbex</title>
+    <link rel="stylesheet" href="./src/style/desktop.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="purple-light"></div>
+    <header>
+      <div id="welbex">
+        <div id="logo-wrap">
+          <img id="logo" src="./src/images/logo.png" alt="logo">
+          <img id="logo-name" src="./src/images/logo-name.png" alt="logo-name">
+        </div>
+        <p>крупный интегратор CRM<br>
+           в России и ещё 8 странах
+        </p>
+      </div>
+      <div id="menu">
+        <p>Услуги</p>
+        <p>Виджеты</p>
+        <p>Интеграции</p>
+        <p>Кейсы</p>
+        <p>Сертификаты</p>
+      </div>
+      <div id="phone-header-wrap">
+        <p id="phone-header">+7 555 555-55-55</p>
+      </div>
+      <div id="contacts">
+        <img src="./src/images/telegram.svg" alt="telegram">
+        <img src="./src/images/viber.svg" alt="phone">
+        <img src="./src/images/whatsapp.svg" alt="whatsapp">
+      </div>
+    </header>
+    <main>
+      <div id="left-column">
+        <p>Зарабатывайте<br>больше</p>
+        <p>с WELBEX</p>
+        <p>Развиваем и контролируем<br>продажи за вас</p>
+      </div>
+      <div id="right-column"></div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
